--- a/ChatSystem/ChatSystem/appsettings.json
+++ b/ChatSystem/ChatSystem/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "connectStr": {
+    "MySql": "server=127.0.0.1;port=3306;user id=root;password=a123456;database=chat_system;charset=utf8;"
+  }
+
 }
 
