--- a/ChatSystem/ChatSystem/ChatSystem.csproj
+++ b/ChatSystem/ChatSystem/ChatSystem.csproj
@@ -10,6 +10,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
@@ -25,8 +27,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Models\Auth\" />
     <Folder Include="Models\ConnectStr\" />
   </ItemGroup>
 </Project>
