--- a/ChatSystem/ChatSystem/ChatSystem.csproj
+++ b/ChatSystem/ChatSystem/ChatSystem.csproj
@@ -28,5 +28,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\ConnectStr\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 </Project>
